@@ -35,7 +35,7 @@
   4dab2d86ca2203a8ac0233824c687504fda4601e 2013091000 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  4fb1cc7d6d9e185966be5cfc82c0c048d66e7bb9 2019020700 mingw32-gcc4.xml
+  4e88f13153d2eb645ff4d13cf4bccd81f923951d 2019042900 mingw32-gcc4.xml
   21031079d59268339bfd7c6dc8239df214588bca 2013091501 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   4646d328c5586fac8d11efa98334c0e4f9aac629 2018122800 mingw32-gettext.xml
@@ -51,7 +51,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   2d0fee36823579871e8d747ae4d4676da6071654 2018122800 mingw32-mpc.xml
   1b5e1e0c486dad8396884033777e13357365ad76 2018122800 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2019021100 mingw32-package-list.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2019042900 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
